web-infras/parser/tests/fixtures/babel/es2017/trailing-function-commas/6/output.txt
[SyntaxError]: Unexpect trailing comma. (1,14)
1|function log(,) { }
 |            ^
